@@ -1,3 +1,6 @@
+2008-07-06 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: added option 'whatsnew_list.url'.
+
 2008-06-09 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/ja/*.rb: converted to UTF-8.
 
